--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Keşfüzzunun Projesi                          # the main title
+title: Keşfüzzunun                          # the main title
 
-tagline: Keşfüzzunun Projesi   # it will display as the sub-title
+tagline: Proje Sayfası   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   Keşfüzzunun Projesi hakkında bilgiler ve gelişmeler
